# radsym

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md
.github/workflows/: ci.yml  docs.yml  publish-crates.yml  release-npm.yml  release-pypi.yml  release.yml
book/: book.toml  build.sh
book/api/radsym/: index.html
book/src/: SUMMARY.md  configuration.md  demo.md  getting-started.md  introduction.md  pipeline-overview.md  references.md
book/src/algorithms/: circle-fit.md  ellipse-refine.md  frst.md  gfrs.md  homography.md  radial-center.md  rsd.md
book/src/demo/: app.js  index.html
book/src/internals/: blur.md  gradient.md  nms.md  pyramid.md
book/src/support/: annulus-sampling.md  scoring.md
crates/radsym/: Cargo.toml  README.md
crates/radsym-py/: Cargo.toml  README.md  pyproject.toml
crates/radsym-py/examples/: README.md  _ringgrid_common.py  _surf_hole_common.py  detect_ringgrid.py  detect_ringgrid_frst.py  detect_ringgrid_frst_fused.py  detect_ringgrid_multiradius.py  detect_ringgrid_rsd_fused.py  detect_surf_hole.py
crates/radsym-py/src/: convert.rs  error.rs  lib.rs  types.rs
crates/radsym-py/src/types/: config.rs  geometry.rs  handles.rs  mod.rs  results.rs
crates/radsym-py/tests/: test_diagnostics.py  test_pipeline.py  test_types.py
crates/radsym-wasm/: Cargo.toml  LICENSE  README.md
crates/radsym-wasm/src/: lib.rs
crates/radsym-wasm/tests/: web.html  web.rs
crates/radsym/benches/: frst_bench.rs  refinement_bench.rs  ringgrid_proposal_bench.rs  rsd_bench.rs  scoring_bench.rs  surf_hole_bench.rs
crates/radsym/examples/: detect_highlight.rs  detect_rings.rs  diagnostics_demo.rs  radial_center_demo.rs
crates/radsym/examples/configs/: detect_highlight.json  detect_rings.json  diagnostics.json  radial_center.json
crates/radsym/src/: lib.rs  pipeline.rs  prelude.rs
crates/radsym/src/affine/: mod.rs  propose.rs  transform.rs
crates/radsym/src/core/: blur.rs  circle_fit.rs  coords.rs  error.rs  geometry.rs  gradient.rs  homography.rs  image_view.rs  io.rs  mod.rs  nms.rs  polarity.rs  pyramid.rs  scalar.rs
crates/radsym/src/diagnostics/: detection.rs  export.rs  heatmap.rs  mod.rs  overlay.rs
crates/radsym/src/propose/: extract.rs  frst.rs  fused.rs  homography.rs  mod.rs  remap.rs  rsd.rs  seed.rs
crates/radsym/src/refine/: circle.rs  circle_fit.rs  edge_profiles.rs  ellipse.rs  ellipse_fit.rs  homography.rs  mod.rs  radial_center.rs  result.rs
crates/radsym/src/support/: annulus.rs  coverage.rs  evidence.rs  hypothesis.rs  mod.rs  profile.rs  score.rs
crates/radsym/tests/: pipeline_e2e.rs  ringgrid_regression.rs  surf_hole_regression.rs
crates/radsym/tests/support/: surf_hole_synthetic.rs
demo/: README.md  app.js  index.html
docs/: backlog.md  design.md  ringgrid-proposals.md
docs/decisions/: 001-coordinate-convention.md  002-image-abstraction.md  003-scalar-precision.md  004-feature-flags.md  005-determinism.md  006-single-crate.md  007-diagnostics-format.md  008-stable-experimental-boundary.md
testdata/: ringgrid_features.json
tools/: eval_surf_holes.py
