[workspace]
resolver = "2"
members = [
    "crates/radsym",
    "crates/radsym-py",
]

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
authors = ["Vitaly Vorobyev <vit.vorobiev@gmail.com>"]
repository = "https://github.com/VitalyVorobyev/radsym"
homepage = "https://github.com/VitalyVorobyev/radsym"
