[package]
name = "radsym-py"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Python bindings for the radsym radial symmetry detection library"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
publish = false

[lib]
name = "radsym_py"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.28"

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
radsym = { path = "../radsym", version = "0.1.2", features = ["image-io", "serde", "rayon"] }
